<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="60dp">
    <ImageView
        android:id="@+id/is_private"
        android:layout_width="@dimen/RoundButtonSize"
        android:layout_height="@dimen/RoundButtonSize"
        android:src="@drawable/private_room"
        android:background="@null"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:text="private?"
        android:layout_weight="0"
        android:layout_marginLeft="@dimen/RoundButtonSize"
        android:layout_gravity="center_vertical"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/sym_action_chat"
        android:background="@null"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:text="private?"
        android:layout_weight="0"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        android:layout_gravity="center_vertical"
        android:textColor="@color/HeaderText"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textSize="20dp"
        android:layout_weight="4"/>
    <Button
        android:id="@+id/join_button"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:text="Join"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/RoundButtonSize"
        style="@style/ButtonCustomHolo"
        android:layout_gravity="center"
        android:layout_weight="0"/>
</LinearLayout>